--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widger.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawerlayout"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <LinearLayout
-        android:id="@+id/my_viewPager_linnerlayout"
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
-        <android.support.v4.view.ViewPager
-            android:id="@+id/my_viewPager"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent">
-        </android.support.v4.view.ViewPager>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/my_drawer"
-        android:layout_width="240dp"
+        android:layout_height="match_parent" />
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#5155d4"
-        android:orientation="vertical"
-        android:padding="5dp">
-        <ListView
-            android:id="@+id/my_listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ListView>
-    </LinearLayout>
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_test"
+        app:menu="@menu/activity_test_drawer" />
 
-</android.support.v4.widger.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
