--- a/app/src/main/res/menu/activity_test_drawer.xml
+++ b/app/src/main/res/menu/activity_test_drawer.xml
@@ -6,20 +6,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_favorite"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_favorite"
             android:title="@string/menu_favorite" />
         <item
             android:id="@+id/nav_catalog"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_menu_catalog"
             android:title="@string/menu_catalog" />
         <item
-            android:id="@+id/nav_tools"
+            android:id="@+id/nav_setting"
             android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:title="@string/menu_setting" />
     </group>
 
     <item android:title="Collection">
