--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,13 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary" />
         </com.google.android.material.appbar.AppBarLayout>
-
+        <EditText
+            android:id="@+id/edsearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/icon_search"
+            android:hint="Search"
+            android:inputType="text" />
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
