--- a/app/src/main/res/layout/fragment_recently.xml
+++ b/app/src/main/res/layout/fragment_recently.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
 
     tools:context=".ui.main.PlaceholderFragment">
-
+        <include layout="@layout/pdf_viewer"></include>
 
 
         <ListView
@@ -20,6 +20,14 @@
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintTop_creator="1" />
 
-
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
